apps/stalwart/aistor/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-aistor
  namespace: stalwart
spec:
  parentRefs:
    - name: stalwart-aistor
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: stalwart-aistor
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart-aistor
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-aistor-console
  namespace: stalwart
spec:
  parentRefs:
    - name: stalwart-aistor
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: stalwart-aistor-console
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart-aistor-console
          port: 9090
